--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gr3njaNews</title>
+  <title>Gr3njaCommunityBlog (GCB)</title>
   <link rel="stylesheet" href="style.css">
   <meta name="google-site-verification" content="CJiicNCGiTJzpbrxZayKAP7j4w8jSGbrlQt8gbvxPYI" />
 </head>
@@ -51,4 +51,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
